bugfix: added buttons as well as fixing bug where exp bar was too big due to being normalised

--- a/src/styles/combat.scss
+++ b/src/styles/combat.scss
@@ -124,14 +124,6 @@
         border: solid 3px transparent;
       }
     }
-    button {
-      cursor: pointer;
-      background: var(--blue700);
-      color: var(--blue100);
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 10px;
-    }
   }
   &-rotationActive {
     border: solid 3px var(--blue700) !important;
